tests/instantiating/range_negative_left_bound_in_list/stderr.golden
error: negative range left bound -1 in value with index 1
bus.fbd +3:13
   |
 3 |     range = [0:12, -1:2]
   |             ^^^^^^^^^^^^
